--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -63,6 +63,8 @@
   }
 }
 
+/*Karina: I will probably need to add this to stylesheets instead*/
+
 .h2Edits /*edits the heading 2*/
 {
   margin-right: 1100px;
