--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -67,24 +67,27 @@
 
 .h2Edits /*edits the heading 2*/
 {
-  margin-right: 1100px;
-  /*uncomment to see the margin*/
-  /*border: 1px solid powderblue;*/
+  resize: none;
+  padding: 80px;
+  width: 380px;
+  border: 1px /*solid powderblue*/;
 }
 
 .paragraph /*edits p in html*/
 {
-  margin-left: 500px;
-  margin-right: 500px;
-  /*uncomment to see the margin*/
-  /*border: 1px solid powderblue;*/
+  /*margin-left: 500px;
+  margin-right: 500px;*/
+  resize: none;
+  padding: 20px;
+  width: 700px;
+  border: 1px /*solid powderblue*/;
   font-size: 140%;
 }
 
 .footer { /*shows info at bottom of page*/
   position: relative;
-  top: 1000px;
-  /*uncomment to see the border*/
-  /*border: 3px solid #73AD21;*/
+  resize: none;
+  padding: 30px;
+  top: 300px;
+  border: 3px /*solid #73AD21*/;
 }
-
