--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -15,6 +15,7 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  font-family: 'Rye', cursive;
 }
 
 .topnav a:hover /* Chnage link colors on hover */
